Buttons code was moved to new file

--- a/qml.qrc
+++ b/qml.qrc
@@ -4,5 +4,6 @@
         <file>qtquickcontrols2.conf</file>
         <file>PasswordWidget.qml</file>
         <file>PasswordCard.qml</file>
+        <file>RectButton.qml</file>
     </qresource>
 </RCC>
