Create window for storage key input

--- a/qml.qrc
+++ b/qml.qrc
@@ -5,5 +5,6 @@
         <file>PasswordWidget.qml</file>
         <file>PasswordCard.qml</file>
         <file>RectButton.qml</file>
+        <file>StoragePasswordInput.qml</file>
     </qresource>
 </RCC>
